[SYNCOPE-452] Avoid copying core/src/test/resources/rest.properties to archetype resources
git-svn-id: https://svn.apache.org/repos/asf/syncope/branches/1_1_X@1547383 13f79535-47bb-0310-9956-ffa450edef68